--- a/02/02.html
+++ b/02/02.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>02-01</title>
+    <title>02-02</title>
     <link
       rel="shortcut icon"
       type="image/png"
@@ -47,7 +47,7 @@
     <script>
       'use strict'
 
-      let gl, program, squareVertexBuffer, squareIndexBuffer, indices
+      let gl, program, squareVertexBuffer
 
       function getShader(id) {
         const script = document.getElementById(id)
@@ -110,11 +110,20 @@
           (-0.5, -0.5, 0)       (0.5, -0.5, 0)
       */
         const vertices = [
+          // first triangle (V0, V1, V2)
           -0.5,
           0.5,
           0,
           -0.5,
           -0.5,
+          0,
+          0.5,
+          -0.5,
+          0,
+
+          // second triangle (V0, V2, V3)
+          -0.5,
+          0.5,
           0,
           0.5,
           -0.5,
@@ -123,8 +132,6 @@
           0.5,
           0,
         ]
-
-        indices = [0, 1, 2, 0, 2, 3]
 
         // Setting up the VBO
         squareVertexBuffer = gl.createBuffer()
@@ -135,18 +142,8 @@
           gl.STATIC_DRAW,
         )
 
-        // Setting up the IBO
-        squareIndexBuffer = gl.createBuffer()
-        gl.bindBuffer(gl.ELEMENT_ARRAY_BUFFER, squareIndexBuffer)
-        gl.bufferData(
-          gl.ELEMENT_ARRAY_BUFFER,
-          new Uint16Array(indices),
-          gl.STATIC_DRAW,
-        )
-
         // Clean
         gl.bindBuffer(gl.ARRAY_BUFFER, null)
-        gl.bindBuffer(gl.ELEMENT_ARRAY_BUFFER, null)
       }
 
       function draw() {
@@ -171,15 +168,12 @@
         )
         gl.enableVertexAttribArray(program.aVertexPosition)
 
-        // Bind IBO
-        gl.bindBuffer(gl.ELEMENT_ARRAY_BUFFER, squareIndexBuffer)
-
         // Draw to the scene using triangle primitives
-        gl.drawElements(gl.TRIANGLES, indices.length, gl.UNSIGNED_SHORT, 0)
+        // gl.drawElements(gl.TRIANGLES, indices.length, gl.UNSIGNED_SHORT, 0)
+        gl.drawArrays(gl.TRIANGLES, 0, 6)
 
         // Clean
         gl.bindBuffer(gl.ARRAY_BUFFER, null)
-        gl.bindBuffer(gl.ELEMENT_ARRAY_BUFFER, null)
       }
 
       function init() {
